--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -35,6 +35,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add news/latest.json
+          git add data/news/news_articles/news-data.json
           git commit -m "chore: update news $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
           git push
