--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -31,14 +31,6 @@ jobs:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: python python/news.py
 
-      - name: Commit & push if changed
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/news/news-data.json
-          git commit -m "chore: update news $(date -u +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-          git push
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -49,3 +41,11 @@ jobs:
 
       - name: Run script
         run: node generate-static.js
+
+      - name: Commit and push JSON + HTML
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "chore: update news + HTML $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git push
